--- a/src/app/personalweb/personalweb.component.html
+++ b/src/app/personalweb/personalweb.component.html
@@ -1,3 +1,5 @@
+<!-- Navbar -->
+
 <div class="first step">
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
